fix getLike
